--- a/css/style-dostavka.css
+++ b/css/style-dostavka.css
@@ -407,7 +407,24 @@ input[type="number"]::-webkit-inner-spin-button {
     transition: 0.3s;
 }
 
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1325px) {
     .bottom2 {
         margin-left: 70px;
@@ -419,6 +436,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -433,6 +453,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .header-line1-p1 {
         font-size: 18px;
     }
@@ -451,6 +474,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .dostavka {
         margin-left: 150px;
     }
@@ -505,6 +531,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .dostavka {
         margin-left: 100px;
     }
@@ -538,6 +567,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .dostavka {
         margin-left: 80px;
     }
@@ -579,6 +611,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .dostavka {
         margin-left: 55px;
     }
@@ -602,6 +637,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -614,6 +652,9 @@ input[type="number"]::-webkit-inner-spin-button {
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .dostavka {
         margin-left: 50px;
     }
