--- a/css/style-head.css
+++ b/css/style-head.css
@@ -878,6 +878,24 @@ body {
     background-color: #87d582;
 }
 
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
+
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1365px) {
     .tovar {
         margin-left: 60px;
@@ -912,6 +930,9 @@ body {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -943,7 +964,9 @@ body {
     .tovary {
         margin-left: 70px;
     }
-
+    .cart-icon {
+        margin-left: 924px;
+    }
     .header-line1-img3 {
         margin-left: 40px;
     }
@@ -1034,6 +1057,9 @@ body {
     }
 }
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -1091,6 +1117,9 @@ body {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -1142,6 +1171,9 @@ body {
     }
 }
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .header-line1-input {
         width: 280px;
     }
@@ -1184,6 +1216,9 @@ body {
     }
 }
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .rassilka-p1 {
         margin-left: 190px;
     }
@@ -1211,6 +1246,9 @@ body {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .rassilka-p1 {
         margin-left: 170px;
     }
@@ -1238,6 +1276,9 @@ body {
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .rassilka-p1 {
         margin-left: 140px;
     }
