--- a/css/style-history1.css
+++ b/css/style-history1.css
@@ -524,7 +524,24 @@ body {
     color: #cce8cf;
     transition: 0.3s;
 }
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1325px) {
     .zakaz {
         width: 760px;
@@ -542,6 +559,9 @@ body {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .zakaz {
         width: 720px;
     }
@@ -565,6 +585,9 @@ body {
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .zakaz {
         width: 680px;
     }
@@ -627,6 +650,9 @@ body {
     }
 }
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .panel {
         margin-left: 150px;
     }
@@ -694,6 +720,9 @@ body {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .panel {
         margin-left: 100px;
     }
@@ -727,6 +756,9 @@ body {
 }
 
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .panel {
         margin-left: 80px;
     }
@@ -778,6 +810,9 @@ body {
     }
 }
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .panel {
         margin-left: 55px;
     }
@@ -801,6 +836,9 @@ body {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -813,6 +851,9 @@ body {
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .panel {
         margin-left: 50px;
     }
