--- a/css/style-oplata.css
+++ b/css/style-oplata.css
@@ -623,7 +623,24 @@ input[type="number"]::-webkit-inner-spin-button {
     color: #cce8cf;
     transition: 0.3s;
 }
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1420px) {
     .cart {
         margin-left: 100px;
@@ -664,6 +681,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .cart {
         width: 330px;
     }
@@ -692,6 +712,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .cart {
         width: 310px;
     }
@@ -744,6 +767,9 @@ input[type="number"]::-webkit-inner-spin-button {
 
 }
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .oplata {
         margin-left: 150px;
     }
@@ -795,6 +821,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .oplata {
         margin-left: 100px;
     }
@@ -825,6 +854,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .oplata {
         margin-left: 80px;
     }
@@ -866,6 +898,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .oplata {
         margin-left: 55px;
     }
@@ -890,6 +925,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -902,6 +940,9 @@ input[type="number"]::-webkit-inner-spin-button {
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .first-name-input {
         width: 190px;
     }
