--- a/css/style-upload-tovar.css
+++ b/css/style-upload-tovar.css
@@ -411,8 +411,24 @@ input[type="number"]::-webkit-inner-spin-button {
     color: #cce8cf;
     transition: 0.3s;
 }
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
-
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1325px) {
     .bottom2 {
         margin-left: 70px;
@@ -424,6 +440,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -438,6 +457,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .header-line1-p1 {
         font-size: 18px;
     }
@@ -456,6 +478,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .uppload {
         margin-left: 150px;
     }
@@ -507,6 +532,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .uppload {
         margin-left: 100px;
     }
@@ -537,6 +565,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .uppload {
         margin-left: 80px;
     }
@@ -575,6 +606,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .uppload {
         margin-left: 55px;
     }
@@ -595,6 +629,9 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -607,6 +644,9 @@ input[type="number"]::-webkit-inner-spin-button {
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .uppload {
         margin-left: 50px;
     }
