--- a/css/style-account.css
+++ b/css/style-account.css
@@ -662,7 +662,24 @@ body {
     opacity: 0.9;
     transition: 0.7s;
 }
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 
 @media (max-width: 1440px) {
     .settings-left-1-input {
@@ -715,6 +732,9 @@ body {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -736,6 +756,9 @@ body {
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .header-line1-p1 {
         font-size: 18px;
     }
@@ -816,6 +839,9 @@ body {
 }
 
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .panel {
         margin-left: 150px;
     }
@@ -885,6 +911,9 @@ body {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -949,6 +978,9 @@ body {
 }
 
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .header-line1-input {
         width: 280px;
     }
@@ -1001,6 +1033,9 @@ body {
 }
 
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .header-line2 {
         padding-left: 55px;
     }
@@ -1043,6 +1078,9 @@ body {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -1078,6 +1116,9 @@ body {
 }
 
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .header-line3-img4 {
         display: none;
     }
