--- a/css/style-basket.css
+++ b/css/style-basket.css
@@ -644,7 +644,24 @@ body {
     opacity: 0.9;
     transition: 0.7s;
 }
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1450px) {
     .cart-right-1 {
         width: 360px;
@@ -732,6 +749,9 @@ body {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -745,6 +765,9 @@ body {
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .header-line3-img4 {
         margin-left: 30px;
     }
@@ -767,6 +790,9 @@ body {
 }
 
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -823,6 +849,9 @@ body {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -904,6 +933,9 @@ body {
 }
 
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .header-line1-input {
         width: 280px;
     }
@@ -993,6 +1025,9 @@ body {
 } 
 
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .header-line2 {
         padding-left: 55px;
     }
@@ -1018,6 +1053,9 @@ body {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -1031,6 +1069,9 @@ body {
 }
 
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .tovar1-p2 {
         max-width: 75px;
     }
