--- a/css/style-filter.css
+++ b/css/style-filter.css
@@ -677,7 +677,24 @@ input[type="range"]::-moz-range-thumb{
     transition: 0.3s;
 }
 
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1325px) {
     .bottom2 {
         margin-left: 70px;
@@ -690,6 +707,9 @@ input[type="range"]::-moz-range-thumb{
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -711,6 +731,9 @@ input[type="range"]::-moz-range-thumb{
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .header-line1-p1 {
         font-size: 18px;
     }
@@ -745,6 +768,9 @@ input[type="range"]::-moz-range-thumb{
 }
 
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -822,6 +848,9 @@ input[type="range"]::-moz-range-thumb{
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -863,6 +892,9 @@ input[type="range"]::-moz-range-thumb{
     }
 }
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .header-line1-input {
         width: 280px;
     }
@@ -904,6 +936,9 @@ input[type="range"]::-moz-range-thumb{
 }
 
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .header-line2 {
         padding-left: 55px;
     }
@@ -928,6 +963,9 @@ input[type="range"]::-moz-range-thumb{
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -940,6 +978,9 @@ input[type="range"]::-moz-range-thumb{
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .header-line3-a4 {
         display: none;
     }
