--- a/css/style-shop.css
+++ b/css/style-shop.css
@@ -888,7 +888,24 @@ body {
     height: 20px;
     background-color: #87d582;
 }
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1365px) {
     .tovar {
         margin-left: 60px;
@@ -923,6 +940,9 @@ body {
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -944,6 +964,9 @@ body {
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .header-line1-p1 {
         font-size: 18px;
     }
@@ -1045,6 +1068,9 @@ body {
     }
 }
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -1102,6 +1128,9 @@ body {
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .header-line1-input {
         width: 300px;
     }
@@ -1153,6 +1182,9 @@ body {
     }
 }
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .header-line1-input {
         width: 280px;
     }
@@ -1195,6 +1227,9 @@ body {
     }
 }
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .rassilka-p1 {
         margin-left: 190px;
     }
@@ -1222,6 +1257,9 @@ body {
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .rassilka-p1 {
         margin-left: 170px;
     }
@@ -1249,6 +1287,9 @@ body {
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .rassilka-p1 {
         margin-left: 140px;
     }
