--- a/css/style-zakaz-history.css
+++ b/css/style-zakaz-history.css
@@ -372,8 +372,24 @@ table{
     margin-right: 20px;
     margin-left: 30px;
 }
+.cart-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20px;
+    min-height: 20px;
+    position: absolute;
+    margin-left: 1127px;
+    margin-top: 25px;
+    background-color: #fff;
+    border: 1px solid #1B6392;
+    border-radius: 50%;
+}
 
-
+.cart-icon-p {
+    color: #1B6392;
+    font-size: 12px;
+}
 @media (max-width: 1325px) {
     .panel {
         margin-left: 150px;
@@ -388,6 +404,9 @@ table{
 }
 
 @media (max-width: 1300px) {
+    .cart-icon {
+        margin-left: 1097px;
+    }
     .panel {
         margin-left: 100px;
     }
@@ -405,6 +424,9 @@ table{
 }
 
 @media (max-width: 1274px) {
+    .cart-icon {
+        margin-left: 924px;
+    }
     .panel {
         margin-left: 50px;
     }
@@ -438,6 +460,9 @@ table{
 }
 
 @media (max-width: 1080px) {
+    .cart-icon {
+        margin-left: 773px;
+    }
     .panel {
         margin-left: 150px;
     }
@@ -493,6 +518,9 @@ table{
 }
 
 @media (max-width: 1000px) {
+    .cart-icon {
+        margin-left: 724px;
+    }
     .panel {
         margin-left: 100px;
     }
@@ -527,6 +555,9 @@ table{
 }
 
 @media (max-width: 890px) {
+    .cart-icon {
+        margin-left: 684px;
+    }
     .panel {
         margin-left: 80px;
     }
@@ -569,6 +600,9 @@ table{
 }
 
 @media (max-width: 850px) {
+    .cart-icon {
+        margin-left: 659px;
+    }
     .panel {
         margin-left: 55px;
     }
@@ -593,6 +627,9 @@ table{
 }
 
 @media (max-width: 820px) {
+    .cart-icon {
+        margin-left: 618px;
+    }
     .header-line3-a4 {
         display: none;
     }
@@ -605,6 +642,9 @@ table{
     }
 }
 @media (max-width: 770px) {
+    .cart-icon {
+        margin-left: 544px;
+    }
     .panel {
         margin-left: 50px;
     }
